# bofdearimgui

./: CMakeLists.txt  Dependencies.cmake  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: compile.cmake  cpack_deb.cmake  cpack_rpm.cmake  dearimgui.cmake  emscripten.cmake  export_version.cmake  imgui.cmake  install.cmake
doc/bofimgui/: readme.md
hello_imgui/: CMakeLists.txt
include/bofdearimgui/: bof_dearimgui.h  bof_dearimgui_imnodes.h  bof_dearimgui_imnodes_internal.h  bof_dearimgui_internal.h
include/bofdearimgui/imgui-knobs/: imgui-knobs.h
include/bofdearimgui/imgui_toggle/: imgui_toggle.h  l
src/: bof_dearimgui.cpp  bof_dearimgui_imnodes.cpp  bof_dearimgui_internal.cpp  bof_imgui.cpp
src/imgui_toggle/: imgui_toggle_renderer.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  ut_imgui.cpp
vcprj/: vcprj_launch.json  vcprj_tasks.json  vcprj_var_def.BHA.json
